# Visora

./: .env.example  .gitignore  Implementation prompts.md  Makefile  README.md  mova.code-workspace  package-lock.json  package.json  pyproject.toml  repo_structure.md
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/src/mova/: main.py
apps/api/src/visora/: __init__.py  dependencies.py  main.py
apps/api/src/visora/routers/: __init__.py  messages.py  projects.py  render.py  scenes.py
apps/web/: package.json  proxy.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/auth/: actions.ts
apps/web/app/auth/callback/: route.ts
apps/web/app/dashboard/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/register/: page.tsx
apps/web/app/signup/: page.tsx
apps/web/components/: auth-provider.tsx  chat-container.tsx  dashboard-input.tsx  model-dropdown.tsx  mova-comparison.tsx  mova-examples.tsx  mova-hero.tsx  mova-pipeline.tsx  project-view.tsx  scene-plan-card.tsx  visora-comparison.tsx  visora-examples.tsx  visora-footer.tsx  visora-header.tsx  visora-hero.tsx  visora-pipeline.tsx
apps/web/components/studio/: chat-panel.tsx  code-panel.tsx  studio-layout.tsx  video-panel.tsx
apps/web/hooks/: use-auth-store.ts  use-dashboard-store.ts  useRenderStatus.ts
apps/web/lib/: api.ts  projects.ts  supabase.ts
apps/web/store/: useVisoraStore.ts
apps/web/types/: api.ts
apps/web/utils/supabase/: client.ts  middleware.ts  server.ts
other/: respose.py  visora_test.py
projectInfo/: mova.md  mova_entire_schema.sql  mova_schema.sql  running_supabase_schema.sql
project_doc/: APP_FLOW.md  IMPLEMENTATION_WORKFLOW.md  PRD.md  ROADMAP.md  TRD.md  project_page_flow.md  running_supabase_schema.sql  visora.md  visora_entire_schema.sql
(+13 files in other folders)
