[project]
name = "mova-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "mova-schemas",
  "mova-agents",
  "mova-db",
  "mova-workers",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.0"
]

[tool.uv.sources]
mova-schemas = { workspace = true }
mova-agents = { workspace = true }
mova-db = { workspace = true }
mova-workers = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mova"]
