[project]
name = "visora-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "visora-schemas",
  "visora-agents",
  "visora-db",
  "visora-workers",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.0"
]

[tool.uv.sources]
visora-schemas = { workspace = true }
visora-agents = { workspace = true }
visora-db = { workspace = true }
visora-workers = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/visora"]
