[project]
name = "visora-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.28.0",
  "python-dotenv>=1.0.0",
  "visora-schemas",
  "visora-agents",
  "visora-workers",
  "pydantic>=2.0"
]

[tool.uv.sources]
visora-schemas = { workspace = true }
visora-agents = { workspace = true }
visora-workers = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/visora"]
